--- a/Application/Home/View/AllInOne/west.html
+++ b/Application/Home/View/AllInOne/west.html
@@ -8,6 +8,8 @@
 </eq>
 <span id="west_project_search">项目查询</span>
 <br>
+<span id="west_alert_search">报警查询</span>
+<br>
 <span id="west_userlogout">注销</span>
 <br>
 
