--- a/Application/Home/View/AllInOne/east.html
+++ b/Application/Home/View/AllInOne/east.html
@@ -2,13 +2,14 @@
     $(document).ready(function() {
         PNotify.prototype.options.styling = "jqueryui";
         function getNotify() {
-            $.get("/index.php/Home/DbOpt/ajaxNotify", function(result){
+            var depsx = $("#user_department").val();
+            $.get("/index.php/Home/Alert/ajaxNotify?depsx=" + depsx, function(result){
                 //console.log(xhr);
                 //alert(xhr.responseText);
                 //var result = eval('(' + xhr.responseText + ')');
                 //console.log(result);
                 if(true == result.state){
-                    alert(result.msg);
+                    //alert(result.msg);
 /*                    new PNotify({
                         title: 'Oh No!',
                         text: result.msg,
@@ -20,9 +21,9 @@
                         type: 'error',
                         icon: 'ui-icon ui-icon-signal-diag'
                     });*/
-                    var notice = new PNotify({
+/*                    var notice = new PNotify({
                         title: 'Click Close Notice',
-                        text: 'Click me anywhere to dismiss me.',
+                        text: result.msg,
                         buttons: {
                             closer: true,
                             sticker: true
@@ -32,7 +33,7 @@
                     });
                     notice.get().click(function() {
                         notice.remove();
-                    });
+                    });*/
 /*                    new PNotify({
                         title: 'Permanent Buttons Notice',
                         text: 'My buttons are really lonely, so they\'re gonna hang out with us.',
@@ -41,26 +42,27 @@
                             sticker_hover: false
                         }
                     });*/
- /*                   (new PNotify({
-                        title: 'Confirmation Needed',
-                        text: 'Are you sure?',
+                    (new PNotify({
+                        title: result.msg,
+                        text: '查看报警?',
                         icon: 'glyphicon glyphicon-question-sign',
                         hide: false,
                         confirm: {
                             confirm: true
                         },
                         buttons: {
-                            closer: false,
-                            sticker: false
+                            closer: true,
+                            sticker: true
                         },
                         history: {
                             history: false
                         }
                     })).get().on('pnotify.confirm', function() {
-                                alert('Ok, cool.');
+                                //alert('Ok, cool.');
+                                $("#west_alert_search").button().click();
                             }).on('pnotify.cancel', function() {
-                                alert('Oh ok. Chicken, I see.');
-                            });*/
+                                //alert('Oh ok. Chicken, I see.');
+                            });
                     return true;
                 }else{
                     return true;
@@ -81,158 +83,15 @@
      }
         });
         }
-        //setInterval(getNotify2, 2000);
-
+        //setInterval(getNotify, 2000);
+        setTimeout(getNotify, 1000);
         //----------------------------------------------------------------------------
-        //-----------------------------------------------------------------------------------------------------
-        function setAlertJqGrid(domTableId,domPageId,cur_dep_sx,cur_user_id){
-            var caption_str = "报警";
-            var search_url = '/index.php/Home/Alert/ajaxAlertSearch';
-            var save_url = '/index.php/Home/Alert/ajaxAlertSave';
-            var colNames = ['ID','信息','部门','日前'];
 
-            var $aletcommgridobj = jQuery(domTableId).jqGrid({
-                url: search_url,
-                datatype: "json",
-                mtype: 'POST',
-                postData: {depsx:cur_dep_sx},
-                colNames: colNames,
-                colModel:[
-                    {name:'id',index:'id',
-                        width:20,align:"right",
-                        sortable:true,
-                        editable:false,
-                        readonly:true,
-                        editoptions:{readonly:true,size:100},
-                        formoptions:{rowpos:1, label: "id", elmprefix:"(*)"}
-                    },
-                    {
-                        name:"msg",
-                        index:"msg",
-                        width:30,
-                        align:"right",
-                        sortable:true,
-                        editable:true, edittype:"text",
-                        editrules:{required:true},
-                        editoptions:{
-                            size:"20"
-                        },
-                        formoptions:{rowpos:2, label: "信息", elmprefix:"(*)"}
-                    },
-                    {
-                        name:"depsx",
-                        index:"depsx",
-                        width:30,
-                        align:"right",
-                        sortable:true,
-                        editable:true, edittype:"text",
-                        editrules:{required:true},
-                        editoptions:{
-                            size:"20"
-                        },
-                        formoptions:{rowpos:3, label: "部门", elmprefix:"(*)"}
-                    },
-                    {
-                        name:"alert_time",
-                        index:"alert_time",
-                        width:30,
-                        align:"right",
-                        sortable:true,
-                        editable:true, edittype:"text",
-                        editrules:{required:true},
-                        editoptions:{
-                            size:"20"
-                        },
-                        formoptions:{rowpos:4, label: "日前", elmprefix:"(*)"}
-                    }
-                ],
-                hiddengrid: false,
-                autowidth: true,
-                rownumbers: true,
-                rowNum:10,
-                rowList:[20,30,50],
-                pager: domPageId,
-                viewrecords: true,
-                sortorder: "desc",
-                forceFit : true,
-                editurl: save_url,
-                caption:caption_str,
-                onSelectRow: function(id){
-                    //
-                },
-                onCellSelect: function(){
-                    //alert("cellselect");
-                },
-                afterInsertRow:function(rowid,rowdata,rowelem){
-                    //alert(rowid);
-                }
-            });
-
-            //导航栏配置和CRUD函数
-            jQuery(domTableId).jqGrid('navGrid',domPageId,
-                    {view:true,search:false,edit:false,add:false,del:false,alerttext:"请选择需要操作的数据行!"}
-            );
-            //
-            var addparameters = {
-            }
-            //
-            var editparameters = {
-                "keys" : false,
-                "oneditfunc" : null,
-                "successfunc" : function(xhr){
-                    var result = eval('(' + xhr.responseText + ')');
-                    if(true == result.state){
-                        return true;
-                    }else{
-                        jAlert(result.msg);
-                        return true;
-                    }
-                },
-                "url" : null,
-                "extraparam" : {depsx:cur_dep_sx},
-                "aftersavefunc" : null,
-                "errorfunc": null,
-                "afterrestorefunc" : null,
-                "restoreAfterError" : true,
-                "mtype" : "POST"
-            }
-            var parameters = {
-                edit: false,
-                editicon: "ui-icon-pencil",
-                add: false,
-                addicon:"ui-icon-plus",
-                save: false,
-                saveicon:"ui-icon-disk",
-                cancel: false,
-                cancelicon:"ui-icon-cancel",
-                addParams : addparameters,
-                editParams : editparameters
-            }
-            jQuery(domTableId).jqGrid('inlineNav',domPageId,parameters);
-
-            //其他配置
-            jQuery(domTableId).jqGrid('gridResize',{minWidth:1500,maxWidth:2000,minHeight:500, maxHeight:1000});
-            jQuery(domTableId).jqGrid('sortableRows');
-
-            /*
-             jQuery(domTableId).jqGrid('filterToolbar');
-             if($(domPageId + ":contains(Toggle)").length < 1){
-                 jQuery(domTableId).jqGrid('navButtonAdd',domPageId,{caption:"Toggle",title:"Toggle Search Toolbar", buttonicon :'ui-icon-pin-s',
-                 onClickButton:function(){
-                 $gyscommgridobj[0].toggleToolbar();
-             }
-             });
-             }*/
-        }
-        setAlertJqGrid("#alertlist","#palertlist",$("#user_department").val());
-        //----------------------------------------------------------------------------
     });
 </script>
 <div>
     <div>
         <INPUT type="text" id="user_department" name="user_department" value="{$user_department}" >
-        <table id="alertlist"></table>
-        <div id="palertlist"></div>
     </div>
 </div>
 
