--- a/Application/Home/View/AllInOne/west.html
+++ b/Application/Home/View/AllInOne/west.html
@@ -2,8 +2,10 @@
     <span id="west_usermng">用户管理</span>
     <br>
 </eq>
-<eq name="department" value="sc">
+<eq name="user_department" value="sc">
     <span id="west_project_mng">项目管理</span>
+    <br>
+    <span id="west_fbs_search">分包商管理</span>
     <br>
 </eq>
 <span id="west_project_search">项目查询</span>
