--- a/Application/Home/View/AllInOne/index.html
+++ b/Application/Home/View/AllInOne/index.html
@@ -160,6 +160,26 @@
             });
         }
 
+        //west_search alert
+        if($("#west_fbs_search").length >= 1){
+            $("#west_fbs_search").button().click(function(event){
+                var tab = $('#tabs li:contains("分包商管理")');
+                var curIndex = tab.index();
+                if(tab.html() != null ) {
+                    maintab.tabs('option', 'active',curIndex);
+                    maintab.tabs( "refresh" );
+                }
+                else {
+                    addTab(maintab,"","分包商管理","/index.php/Home/Fbs/fbsmng","");
+                    //
+                    var tab = $('#tabs li:contains("分包商管理")');
+                    var curIndex = tab.index();
+                    maintab.tabs('option', 'active', curIndex);
+                    maintab.tabs( "refresh" );
+                }
+            });
+        }
+
         if($("#west_userlogout").length >= 1){
             $("#west_userlogout").button().click(function(event){
                 window.location.replace("/index.php");
