--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -44,6 +44,8 @@
     <script src="__PUBLIC__/js/Lib/pnotify/pnotify.history.js" type="text/javascript"></script>
     <script src="__PUBLIC__/js/Lib/pnotify/pnotify.callbacks.js" type="text/javascript"></script>
     <script src="__PUBLIC__/js/Lib/pnotify/pnotify.reference.js" type="text/javascript"></script>
+    <!--fusioncharts -->
+    <script src="__PUBLIC__/js/Lib/FusionCharts/Charts/FusionCharts.js" type="text/javascript"></script>
     <script type="text/javascript">
         $.jgrid.no_legacy_api = true;
         $.jgrid.useJSON = true;
