--- a/Application/Home/View/AllInOne/module_xmcbgl.html
+++ b/Application/Home/View/AllInOne/module_xmcbgl.html
@@ -910,7 +910,7 @@
         <table>
             <tr>
                 <td>项目财务编号：</td>
-                <td><input type="text" id="ht_xmcwbh" name="ht_xmcwbh" jb_field="jb_single_save"/></td>
+                <td><input type="text" id="ht_xmcwbh" name="ht_xmcwbh" jb_field="" readonly="true" /></td>
                 <td>合同金额：</td>
                 <td><input type="text" id="ys_hetong_amt" name="ys_hetong_amt" /></td>
                 <td>合同结算总金额：</td>
