--- a/Application/Home/View/AllInOne/module_xmrlzygl.html
+++ b/Application/Home/View/AllInOne/module_xmrlzygl.html
@@ -148,13 +148,12 @@
 
 <div id="module_xmrlzygl"  class="module">
     <h3><a href="#">项目人力资源管理</a></h3>
-    <div class="divtab" >
+    <div>
         <!--     项目人力资源管理
 
                 部门	岗位	人员	同一岗位多人员工作比	说明	编程说明
                 市场部	市场经理	来自市场部	来自市场部	可输入文字说明	工作比默认为100%
                 市场部助理	来自市场部		可输入文字说明	无需设置工作比例
-
         -->
         <table>
             <thead>
@@ -589,7 +588,7 @@
                 <td><SELECT type="text" id="gc_rlzy_aqy1" name="gc_rlzy_aqy1"  jb_dep="gc"  jb_field="jb_single_save" />
                 </td>
                 <td>
-                    <SELECT type="text" id="gc_rlzy_aqy1_choose" name="gc_rlzy_aqy1_choose"  jb_choose="" >
+                    <SELECT type="text" id="gc_rlzy_aqy1_choose" name="gc_rlzy_aqy1_choose" disabled="true" jb_choose="" >
                         <option value="0" selected="selected">0</option>
                     </select>
                 </td>
@@ -604,7 +603,7 @@
                 <td><SELECT type="text" id="gc_rlzy_aqy2" name="gc_rlzy_aqy2"  jb_dep="gc"  jb_field="jb_single_save" />
                 </td>
                 <td>
-                    <SELECT type="text" id="gc_rlzy_aqy2_choose" name="gc_rlzy_aqy2_choose"  jb_choose="" >
+                    <SELECT type="text" id="gc_rlzy_aqy2_choose" name="gc_rlzy_aqy2_choose"  disabled="true" jb_choose="" >
                         <option value="0" selected="selected">0</option>
                     </select>
                 </td>
@@ -619,7 +618,7 @@
                 <td><SELECT type="text" id="gc_rlzy_aqy3" name="gc_rlzy_aqy3"  jb_dep="gc"  jb_field="jb_single_save" />
                 </td>
                 <td>
-                    <SELECT type="text" id="gc_rlzy_aqy3_choose" name="gc_rlzy_aqy3_choose"  jb_choose="" >
+                    <SELECT type="text" id="gc_rlzy_aqy3_choose" name="gc_rlzy_aqy3_choose"  disabled="true" jb_choose="" >
                         <option value="0" selected="selected">0</option>
                     </select>
                 </td>
@@ -634,7 +633,7 @@
                 <td><SELECT type="text" id="gc_rlzy_kfbj1" name="gc_rlzy_kfbj1"  jb_dep="gc"  jb_field="jb_single_save" />
                 </td>
                 <td>
-                    <SELECT type="text" id="gc_rlzy_kfbj1_choose" name="gc_rlzy_kfbj1_choose"  jb_choose="" >
+                    <SELECT type="text" id="gc_rlzy_kfbj1_choose" name="gc_rlzy_kfbj1_choose"  disabled="true" jb_choose="" >
                         <option value="0" selected="selected">0</option>
                     </select>
                 </td>
@@ -646,10 +645,10 @@
             <tr>
                 <td>工程部</td>
                 <td>库房及保洁负责人2</td>
-                <td><SELECT type="text" id="gc_rlzy_kfbj2" name="gc_rlzy_kfbj2"  jb_dep="gc"  jb_field="jb_single_save" />
+                <td><SELECT type="text" id="gc_rlzy_kfbj2" name="gc_rlzy_kfbj2"  jb_dep="gc"   jb_field="jb_single_save" />
                 </td>
                 <td>
-                    <SELECT type="text" id="gc_rlzy_kfbj2_choose" name="gc_rlzy_kfbj2_choose"  jb_choose="" >
+                    <SELECT type="text" id="gc_rlzy_kfbj2_choose" name="gc_rlzy_kfbj2_choose"  disabled="true" jb_choose="" >
                         <option value="0" selected="selected">0</option>
                     </select>
                 </td>
