--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -46,6 +46,11 @@
     <script src="__PUBLIC__/js/Lib/pnotify/pnotify.reference.js" type="text/javascript"></script>
     <!--fusioncharts -->
     <script src="__PUBLIC__/js/Lib/FusionCharts/Charts/FusionCharts.js" type="text/javascript"></script>
+    <!--jquery.sexy-combo-->
+    <script src="__PUBLIC__/js/Lib/jquery.sexy-combo/jquery.sexy-combo.js" type="text/javascript"></script>
+    <!--tag-it-->
+    <script src="__PUBLIC__/js/Lib/tag-it/js/tag-it.js" type="text/javascript"></script>
+
     <script type="text/javascript">
         $.jgrid.no_legacy_api = true;
         $.jgrid.useJSON = true;
@@ -70,7 +75,13 @@
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/js/Lib/pnotify/pnotify.picon.css"   />
     <!-- Oxygen Icons -->
    <link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/pnotify/oxygen/icons.css" />
-
+    <!--jquery.sexy-combo-->
+    <link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/jquery.sexy-combo/css/sexy-combo.css" />
+    <link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/jquery.sexy-combo/css/sexy/sexy.css" />
+    <link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/jquery.sexy-combo/css/custom/custom.css" />
+    <!--tag-it-->
+    <link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/tag-it/css/jquery.tagit.css" />
+    <link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/tag-it/css/tagit.ui-zendesk.css" />
     <style type="text/css">
         /* Not PNotify specific, just make this page a little more presentable. */
         #switcher-container {
