--- a/Application/Home/View/AllInOne/module_xmsjgl.html
+++ b/Application/Home/View/AllInOne/module_xmsjgl.html
@@ -1,27 +1,38 @@
 <script type="text/javascript">
     $(document).ready(function() {
+        //get vo
+        function get_sjgl_all_nodes(pro_id){
+            var ret = $.get("/index.php/Home/Fusion/ajaxGetSjgl?pro_id=" + $("#pro_id").val(), function(xhr){
+                console.log(xhr);
+                var sjglChart = new FusionCharts( "__PUBLIC__/js/Lib/FusionCharts/Charts/Line.swf",
+                        "sjglChartId", "1400", "500", "0", "1" );
+                sjglChart.setJSONData( {
+                    "chart":
+                    {
+                        "caption" : "项目时间偏差波形图" ,
+                        "xAxisName" : "时间里程碑",
+                        "yAxisName" : "天数",
+                        "numberPrefix" : "",
+                        "rotateNames" : 1
+                    },
+                    "data" : xhr
+                } );
+                sjglChart.render("sjglchartContainer");
+            });
+            return ret;
+        }
+        //jquery promise init.
+        $.when(get_sjgl_all_nodes())
+                .done(function(){
+                    //
+                });
+
     });
 </script>
 
-<style>
-/*    .module table{border-collapse:collapse;border-spacing:0;border-left:1px solid #888;border-top:1px solid #888;background:#efefef;}
-    .module th,td{border-right:1px solid #888;border-bottom:1px solid #888;padding:5px 15px;}
-    .module th{font-weight:bold;background:#ccc;}*/
-/*table{
-    table-layout:fixed;
-    empty-cells:show;
-    border-collapse: collapse;
-    margin:0 auto;
-}*/
-/*table.t1{
-    border:1px solid #cad9ea;
-    color:#666;
-}*/
-</style>
-
 <div id="module_xmsjgl"  class="module">
     <h3><a href="#">项目时间管理</a></h3>
-    <div class="divtab">
+    <div>
 <!--     项目时间管理
         项目里程牌	计划项目实施时间	实际项目实施时间	说明	编程说明
         发标日期		来自市场部	可输入文字说明
@@ -36,6 +47,18 @@
                 <td>发标日期：<INPUT type="text" id="sc_fb_time" name="sc_fb_time"  jb_time_field="" jb_field="jb_single_save" /></td>
                 <td>说明:
                     <textarea id="sc_fb_time_desc" name="sc_fb_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                </td>
+            </tr>
+            <tr>
+                <td>设计方案提交日期：<INPUT type="text" id="sj_sjfatj_time" name="sj_sjfatj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>说明:
+                    <textarea id="sj_sjfatj_time_desc" name="sj_sjfatj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                </td>
+            </tr>
+            <tr>
+                <td>机电方案提交日期：<INPUT type="text" id="jd_jdfatj_time" name="jd_jdfatj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>说明:
+                    <textarea id="jd_jdfatj_time_desc" name="jd_jdfatj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
                 </td>
             </tr>
             <tr>
@@ -56,18 +79,6 @@
                     <textarea id="sc_htqd_time_desc" name="sc_htqd_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
                 </td>
             </tr>
-            <tr>
-                <td>机电方案提交日期：<INPUT type="text" id="jd_jdfatj_time" name="jd_jdfatj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>说明:
-                    <textarea id="jd_jdfatj_time_desc" name="jd_jdfatj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
-                </td>
-            </tr>
-            <tr>
-                <td>设计方案提交日期：<INPUT type="text" id="sj_sjfatj_time" name="sj_sjfatj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>说明:
-                    <textarea id="sj_sjfatj_time_desc" name="sj_sjfatj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
-                </td>
-            </tr>
         </table>
         <table>
             <thead>
@@ -78,7 +89,7 @@
                 <th>说明</th>
             </tr>
             </thead>
-            <!--设计部------------------------------------------------------------------------------------------------------------>
+            <!--项目里程牌------------------------------------------------------------------------------------------------------------>
             <tr>
                 <td>设计报批图提交日期</td>
                 <td></td>
@@ -88,24 +99,6 @@
                 </td>
             </tr>
             <tr>
-                <td>装修施工图提交日期</td>
-                <td></td>
-                <td><INPUT type="text" id="sj_zxsgt_time" name="sj_zxsgt_time" jb_time_field=""  jb_field="jb_single_save" /></td>
-                <td>
-                    <textarea id="sj_zxsgt_time_desc" name="sj_zxsgt_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
-                </td>
-            </tr>
-            <tr>
-                <td>装修竣工图提交时间</td>
-                <td></td>
-                <td><INPUT type="text" id="sj_zxjgt_time" name="sj_zxjgt_time"  jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>
-                    <textarea id="sj_zxjgt_time_desc" name="sj_zxjgt_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
-                </td>
-            </tr>
-            <!--设计部------------------------------------------------------------------------------------------------------------>
-            <!--机电部------------------------------------------------------------------------------------------------------------>
-            <tr>
                 <td>机电报批图提交日期</td>
                 <td></td>
                 <td><INPUT type="text" id="jd_jdbpttj_time" name="jd_jdbpttj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
@@ -113,60 +106,6 @@
                     <textarea id="jd_jdbpttj_time_desc" name="jd_jdbpttj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
                 </td>
             </tr>
-            <tr>
-                <td>机电施工图提交日期</td>
-                <td></td>
-                <td><INPUT type="text" id="jd_jdsgttj_time" name="jd_jdsgttj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>
-                    <textarea id="jd_jdsgttj_time_desc" name="jd_jdsgttj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
-                </td>
-            </tr>
-            <tr>
-                <td>机电竣工图提交时间</td>
-                <td></td>
-                <td><INPUT type="text" id="jd_jdjgttj_time" name="jd_jdjgttj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>
-                    <textarea id="jd_jdjgttj_time_desc" name="jd_jdjgttj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
-                </td>
-            </tr>
-            <!--机电部------------------------------------------------------------------------------------------------------------>
-            <!--预算部------------------------------------------------------------------------------------------------------------>
-            <tr>
-                <td>采购内控单提交时间</td>
-                <td></td>
-                <td><INPUT type="text" id="ys_cg_nkt_tj_time" name="ys_cg_nkt_tj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>
-                    <textarea id="ys_cg_nkt_tj_time_desc" name="ys_cg_nkt_tj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
-                </td>
-            </tr>
-            <tr>
-                <td>现场内控单提交时间</td>
-                <td></td>
-                <td><INPUT type="text" id="ys_xc_nkt_tj_time" name="ys_xc_nkt_tj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>
-                    <textarea id="ys_xc_nkt_tj_time_desc" name="ys_xc_nkt_tj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
-                </td>
-            </tr>
-            <tr>
-                <td>项目结算完成时间</td>
-                <td></td>
-                <td><INPUT type="text" id="ys_jswc_time" name="ys_jswc_time"  jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>
-                    <textarea id="ys_jswc_time_desc" name="ys_jswc_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
-                </td>
-            </tr>
-            <!--预算部------------------------------------------------------------------------------------------------------------>
-            <!--采购部------------------------------------------------------------------------------------------------------------>
-            <tr>
-                <td>材料报批完成时间</td>
-                <td></td>
-                <td><INPUT type="text" id="cg_clbp_wc_time" name="cg_clbp_wc_time" jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>
-                    <textarea id="cg_clbp_wc_time_desc" name="cg_clbp_wc_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
-                </td>
-            </tr>
-            <!--采购部------------------------------------------------------------------------------------------------------------>
-            <!--工程部------------------------------------------------------------------------------------------------------------>
             <tr>
                 <td>大厦报批提交日期</td>
                 <td><INPUT type="text" id="gc_dsbptj_jh_time" name="gc_dsbptj_jh_time" jb_time_field="" jb_field="jb_single_save" /></td>
@@ -200,27 +139,35 @@
                 </td>
             </tr>
             <tr>
-                <td>消防验收提交日期</td>
-                <td><INPUT type="text" id="gc_xfystj_jh_time" name="gc_xfystj_jh_time" jb_time_field="" jb_field="jb_single_save" /></td>
-                <td><INPUT type="text" id="gc_xfystj_sj_time" name="gc_xfystj_sj_time" jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>
-                    <textarea id="gc_xfystj_time_desc" name="gc_xfbppz_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
-                </td>
-            </tr>
-            <tr>
-                <td>消防验收批准日期</td>
+                <td>装修施工图提交日期</td>
                 <td></td>
-                <td><INPUT type="text" id="gc_xfyspz_time" name="gc_xfyspz_time" jb_time_field="" jb_field="jb_single_save" /></td>
+                <td><INPUT type="text" id="sj_zxsgt_time" name="sj_zxsgt_time" jb_time_field=""  jb_field="jb_single_save" /></td>
                 <td>
-                    <textarea id="gc_xfyspz_time_desc" name="gc_xfyspz_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="sj_zxsgt_time_desc" name="sj_zxsgt_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
                 </td>
             </tr>
             <tr>
-                <td>开工日期</td>
-                <td><INPUT type="text" id="gc_kg_jh_time" name="gc_kg_jh_time" jb_time_field="" jb_field="jb_single_save" /></td>
-                <td><INPUT type="text" id="gc_kg_sj_time" name="gc_kg_sj_time" jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>机电施工图提交日期</td>
+                <td></td>
+                <td><INPUT type="text" id="jd_jdsgttj_time" name="jd_jdsgttj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
                 <td>
-                    <textarea id="gc_kg_time_desc" name="gc_kg_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="jd_jdsgttj_time_desc" name="jd_jdsgttj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                </td>
+            </tr>
+            <tr>
+                <td>采购内控单提交时间</td>
+                <td></td>
+                <td><INPUT type="text" id="ys_cg_nkt_tj_time" name="ys_cg_nkt_tj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>
+                    <textarea id="ys_cg_nkt_tj_time_desc" name="ys_cg_nkt_tj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                </td>
+            </tr>
+            <tr>
+                <td>现场内控单提交时间</td>
+                <td></td>
+                <td><INPUT type="text" id="ys_xc_nkt_tj_time" name="ys_xc_nkt_tj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>
+                    <textarea id="ys_xc_nkt_tj_time_desc" name="ys_xc_nkt_tj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
                 </td>
             </tr>
             <tr>
@@ -232,11 +179,27 @@
                 </td>
             </tr>
             <tr>
+                <td>开工日期</td>
+                <td><INPUT type="text" id="gc_kg_jh_time" name="gc_kg_jh_time" jb_time_field="" jb_field="jb_single_save" /></td>
+                <td><INPUT type="text" id="gc_kg_sj_time" name="gc_kg_sj_time" jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>
+                    <textarea id="gc_kg_time_desc" name="gc_kg_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                </td>
+            </tr>
+            <tr>
                 <td>隔墙隐检日期</td>
                 <td><INPUT type="text" id="gc_gqyj_jh_time" name="gc_gqyj_jh_time" jb_time_field="" jb_field="jb_single_save" /></td>
                 <td><INPUT type="text" id="gc_gqyj_sj_time" name="gc_gqyj_sj_time" jb_time_field="" jb_field="jb_single_save" /></td>
                 <td>
                     <textarea id="gc_gqyj_time_desc" name="gc_gqyj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                </td>
+            </tr>
+            <tr>
+                <td>材料报批完成时间</td>
+                <td></td>
+                <td><INPUT type="text" id="cg_clbp_wc_time" name="cg_clbp_wc_time" jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>
+                    <textarea id="cg_clbp_wc_time_desc" name="cg_clbp_wc_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
                 </td>
             </tr>
             <tr>
@@ -253,6 +216,38 @@
                 <td><INPUT type="text" id="gc_thyj_sj_time" name="gc_thyj_sj_time" jb_time_field="" jb_field="jb_single_save" /></td>
                 <td>
                     <textarea id="gc_thyj_time_desc" name="gc_thyj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                </td>
+            </tr>
+            <tr>
+                <td>装修竣工图提交时间</td>
+                <td></td>
+                <td><INPUT type="text" id="sj_zxjgt_time" name="sj_zxjgt_time"  jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>
+                    <textarea id="sj_zxjgt_time_desc" name="sj_zxjgt_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                </td>
+            </tr>
+            <tr>
+                <td>机电竣工图提交时间</td>
+                <td></td>
+                <td><INPUT type="text" id="jd_jdjgttj_time" name="jd_jdjgttj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>
+                    <textarea id="jd_jdjgttj_time_desc" name="jd_jdjgttj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                </td>
+            </tr>
+            <tr>
+                <td>消防验收提交日期</td>
+                <td><INPUT type="text" id="gc_xfystj_jh_time" name="gc_xfystj_jh_time" jb_time_field="" jb_field="jb_single_save" /></td>
+                <td><INPUT type="text" id="gc_xfystj_sj_time" name="gc_xfystj_sj_time" jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>
+                    <textarea id="gc_xfystj_time_desc" name="gc_xfbppz_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                </td>
+            </tr>
+            <tr>
+                <td>消防验收批准日期</td>
+                <td></td>
+                <td><INPUT type="text" id="gc_xfyspz_time" name="gc_xfyspz_time" jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>
+                    <textarea id="gc_xfyspz_time_desc" name="gc_xfyspz_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
                 </td>
             </tr>
             <tr>
@@ -288,6 +283,14 @@
                 </td>
             </tr>
             <tr>
+                <td>项目结算完成时间</td>
+                <td></td>
+                <td><INPUT type="text" id="ys_jswc_time" name="ys_jswc_time"  jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>
+                    <textarea id="ys_jswc_time_desc" name="ys_jswc_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                </td>
+            </tr>
+            <tr>
                 <td>移交售后日期</td>
                 <td><INPUT type="text" id="gc_yjsh_jh_time" name="gc_yjsh_jh_time" jb_time_field="" jb_field="jb_single_save" /></td>
                 <td><INPUT type="text" id="gc_yjsh_sj_time" name="gc_yjsh_sj_time" jb_time_field="" jb_field="jb_single_save" /></td>
@@ -303,7 +306,9 @@
                     <textarea id="gc_zbqm_time_desc" name="gc_zbqm_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
                 </td>
             </tr>
-            <!--工程部------------------------------------------------------------------------------------------------------------>
         </table>
+        <div>
+            <div id="sjglchartContainer">FusionCharts XT will load here!</div>
+        </div>
     </div>
 </div>
